--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=../bootcamp/public_html
+    - export DEPLOYPATH=../public_html
     - /bin/cp -R . $DEPLOYPATH
